--- a/src/scss/app/main.scss
+++ b/src/scss/app/main.scss
@@ -9,18 +9,26 @@ body {
   width: 100%;
   height: 100vh;
   position: relative;
-  background: blue;
+  background: lightgray;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
   #ageGate {
+    position: absolute;
     background: #e9e9e1;
     height: 100%;
-    width: 90%;
+    width: 100%;
     padding: 15% 0;
     display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: auto;
+    z-index: 3;
+    top: 0;
+    left: 0;
     &.active {
       display: flex;
     }
@@ -132,5 +140,19 @@ body {
       font-family: "Roboto", sans-serif;
       font-size: 16px;
     }
+  }
+
+  h2.body-title {
+    font-family: "Roboto", sans-serif;
+    font-size: 36px;
+    margin-bottom: 10px;
+    color: #2a2a2a;
+  }
+
+  h3.subtitle {
+    font-family: "Roboto", sans-serif;
+    font-size: 22px;
+    margin-bottom: 10px;
+    color: #2a2a2a;
   }
 }
