--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,7 +7,6 @@
 
 body {
   width: 100%;
-  height: 100vh;
   position: relative;
   background: lightgray;
   display: flex;
@@ -18,146 +17,204 @@ body {
   #ageGate {
     position: absolute;
     background: #e9e9e1;
-    height: 100%;
+    height: 100vh;
     width: 100%;
-    padding: 15% 0;
+    padding: 30% 0;
     display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: auto;
     z-index: 3;
     top: 0;
     left: 0;
     &.active {
       display: flex;
     }
-    .logo {
+    .container {
+      width: 100%;
+      max-width: 1440px;
       margin: 0 auto;
-      margin-bottom: 20px;
-      img {
-        display: inline-block;
-        width: 100%;
-        max-width: 250px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      .logo {
+        margin: 0 auto;
+        margin-bottom: 1.39%;
+        img {
+          display: inline-block;
+          width: 100%;
+          max-width: 150px;
+        }
       }
-    }
-    h1.header {
-      font-family: "Roboto", sans-serif;
-      font-size: 36px;
-      font-weight: 700;
-      text-transform: uppercase;
-      color: #2a2a2a;
-      margin-bottom: 30px;
-    }
-    h3.subheader {
-      font-family: "Roboto", sans-serif;
-      font-size: 14px;
-      color: #2a2a2a;
-      margin-bottom: 15px;
-    }
-    .formgroup {
-      width: 50%;
-      margin: 0 auto;
-      text-align: center;
-      margin-bottom: 20px;
-      position: relative;
+      h1.header {
+        font-family: "Roboto", sans-serif;
+        font-size: 2.5vw;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: #2a2a2a;
+        margin-bottom: 2.08%;
+      }
+      h3.subheader {
+        font-family: "Roboto", sans-serif;
+        font-size: 0.972vw;
+        color: #2a2a2a;
+        margin-bottom: 1.04%;
+      }
+      .formgroup {
+        width: 50%;
+        margin: 0 auto;
+        text-align: center;
+        margin-bottom: 1.39%;
+        position: relative;
 
-      #month,
-      #day,
-      #year {
-        appearance: none;
-        -o-appearance: none;
-        -ms-appearance: none;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        margin: 0 10px;
-        display: inline-block;
-        font-size: 16px;
+        #month,
+        #day,
+        #year {
+          appearance: none;
+          -o-appearance: none;
+          -ms-appearance: none;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          margin: 0 10px;
+          display: inline-block;
+          font-size: 1vw;
+          font-family: "Roboto", sans-serif;
+          color: #2a2a2a;
+          border: 1px solid #aaa;
+          padding: 2.08%;
+          background: #fff;
+          border-radius: 25px;
+          cursor: pointer;
+          -moz-appearance: none;
+          -webkit-appearance: none;
+          appearance: none;
+          background-color: #fff;
+          background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E"),
+            linear-gradient(to bottom, #fff 0%, #fff 100%);
+          background-repeat: no-repeat, repeat;
+          background-position: right 0.7em top 50%, 0 0;
+          background-size: 0.65em auto, 100%;
+        }
+        #month {
+          width: 30%;
+        }
+        #day {
+          width: 15%;
+        }
+        #year {
+          width: 30%;
+        }
+      }
+      .checkbox-row {
+        margin: 0 auto;
         font-family: "Roboto", sans-serif;
         color: #2a2a2a;
-        border: 1px solid #aaa;
-        padding: 15px;
-        background: #fff;
-        border-radius: 25px;
-        cursor: pointer;
-        -moz-appearance: none;
-        -webkit-appearance: none;
-        appearance: none;
-        background-color: #fff;
-        background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E"),
-          linear-gradient(to bottom, #fff 0%, #fff 100%);
-        background-repeat: no-repeat, repeat;
-        background-position: right 0.7em top 50%, 0 0;
-        background-size: 0.65em auto, 100%;
+        font-size: 1vw;
+        margin-bottom: 1.04%;
+        display: flex;
+        align-items: center;
       }
-      #month {
-        width: 30%;
-      }
-      #day {
-        width: 15%;
-      }
-      #year {
-        width: 30%;
-      }
-    }
 
-    .checkbox-row {
-      margin: 0 auto;
-      font-family: "Roboto", sans-serif;
-      color: #2a2a2a;
-      font-size: 16px;
-      margin-bottom: 15px;
-    }
-
-    #enter-btn {
-      display: inline-block;
-      width: 25%;
-      padding: 20px;
-      background: brown;
-      text-align: center;
-      font-family: "Roboto", sans-serif;
-      font-weight: 700;
-      font-size: 22px;
-      color: #fff;
-      text-align: center;
-      text-transform: uppercase;
-      margin-bottom: 10px;
-      cursor: pointer;
-    }
-
-    #result {
-      p {
-        margin-bottom: 10px;
+      #enter-btn {
+        display: inline-block;
+        width: 25%;
+        padding: 1.39%;
+        background: brown;
+        text-align: center;
         font-family: "Roboto", sans-serif;
-        font-size: 16px;
-        font-weight: bold;
-        &.positive {
-          color: forestgreen;
-        }
-        &.negative {
-          color: red;
+        font-weight: 700;
+        font-size: 1.528vw;
+        color: #fff;
+        text-align: center;
+        text-transform: uppercase;
+        margin-bottom: 0.69%;
+        cursor: pointer;
+      }
+
+      #result {
+        p {
+          margin-bottom: 0.69%;
+          font-family: "Roboto", sans-serif;
+          font-size: 1vw;
+          font-weight: bold;
+          &.positive {
+            color: forestgreen;
+          }
+          &.negative {
+            color: red;
+          }
         }
       }
-    }
-    a {
-      text-decoration: none;
-      color: brown;
-      font-family: "Roboto", sans-serif;
-      font-size: 16px;
+      a {
+        text-decoration: none;
+        color: brown;
+        font-family: "Roboto", sans-serif;
+        font-size: 1vw;
+      }
     }
   }
 
   h2.body-title {
     font-family: "Roboto", sans-serif;
-    font-size: 36px;
-    margin-bottom: 10px;
+    font-size: 2.5vw;
+    margin-bottom: 0.69%;
     color: #2a2a2a;
   }
 
   h3.subtitle {
     font-family: "Roboto", sans-serif;
-    font-size: 22px;
-    margin-bottom: 10px;
+    font-size: 1.528vw;
+    margin-bottom: 0.69%;
     color: #2a2a2a;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  body {
+    #ageGate {
+      .container {
+        .logo {
+          margin-bottom: 6.04%;
+        }
+        h1.header {
+          font-size: 4vw;
+          margin-bottom: 3%;
+        }
+        h3.subheader {
+          font-size: 2vw;
+          margin-bottom: 2%;
+        }
+        .formgroup {
+          width: 100%;
+          margin-bottom: 2%;
+          #month,
+          #day,
+          #year {
+            background-size: 2em auto, 100%;
+            font-size: 2vw;
+          }
+        }
+        .checkbox-row {
+          font-size: 2.5vw;
+          margin-bottom: 3.5%;
+        }
+        #enter-btn {
+          width: 50%;
+          padding: 3.5%;
+          font-size: 3vw;
+          margin-bottom: 2%;
+        }
+        #result {
+          p {
+            margin-bottom: 5%;
+            font-size: 2.5vw;
+          }
+        }
+        a {
+          font-size: 2vw;
+        }
+      }
+    }
   }
 }
